--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.col-acoes {
+    width: 90px;
+    text-align: center;
+}
+  
+.col-acoes-header {
+    width: 90px;
+}
+
